<?xml version="1.0"?>
<package>
  <name>roboteq_driver</name>
  <version>0.0.0</version>
  <description>The roboteq_driver package</description>

  <maintainer email="riverlab@wpi.edu">Maintained by the WPI RIVeR Lab</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>device_driver_base</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>device_driver_base</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
